ストップウォッチ作成

--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
       <button id="start_stop" class="btn btn-lg btn-primary">START</button>
     </div>
   </div>
+
+  <script src="js/script.js"></script>
+
 </body>
 </html>
